Refonte des beans utilisateurs et paramètres